--- a/frontend/src/pages/login.html
+++ b/frontend/src/pages/login.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     <div class="auth-page">
+        <button onclick="window.location.href='index.html'" class="back-button">
+            Voltar
+        </button>
         <h1 class="site-title">ArqueoTech</h1>
         
         <div class="auth-container">
