--- a/frontend/src/pages/cadastro.html
+++ b/frontend/src/pages/cadastro.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <div class="auth-page">
+        <button onclick="window.location.href='index.html'" class="back-button">
+            Voltar
+        </button>
         <h1 class="site-title">ArqueoTech</h1>
         
         <div class="auth-container">
@@ -24,6 +27,7 @@
                             required 
                             placeholder="Nome completo"
                         >
+                        
                     </div>
 
                     <div class="form-group">
