atualização para entrega

--- a/frontend/src/pages/cadastro.html
+++ b/frontend/src/pages/cadastro.html
@@ -1,3 +1,8 @@
+<!-- 
+Init: 22/12/24
+Update: 26/02/25 
+Objective: Cadastro page of the application 
+-->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
