--- a/frontend/src/pages/index.html
+++ b/frontend/src/pages/index.html
@@ -1,3 +1,9 @@
+<!-- 
+Init: 22/12/24
+Update: 26/02/25 
+Objective: Create the main page of the application 
+-->
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -45,6 +51,7 @@
     <div class="section-title">
         <h2>Identificação de Vasos de Gargalo e de Cariátides</h2>
     </div>
+    
     <div class="ia-container">
         <div class="input-options">
             <button type="button" id="toggleButton" onclick="toggleCamera()" 
