Atualização  para entrega diego

--- a/frontend/src/pages/cadastro.html
+++ b/frontend/src/pages/cadastro.html
@@ -46,6 +46,15 @@ Objective: Cadastro page of the application
 
                     <div class="form-group">
                         <input 
+                            type="text" 
+                            id="institution" 
+                            required 
+                            placeholder="Instituição ou Sociedade Civi"
+                        >
+                    </div>
+
+                    <div class="form-group">
+                        <input 
                             type="password" 
                             id="password" 
                             required 
